--- a/app/templates/stocks/details_enhanced.html
+++ b/app/templates/stocks/details_enhanced.html
@@ -747,7 +747,7 @@
                             </div>
                             
                             <div class="mt-3">
-                                <a href="{{ url_for('main.search') }}?q={{ ticker }}" class="btn btn-outline-primary">
+                                <a href="{{ url_for('stocks.search') }}?q={{ ticker }}" class="btn btn-outline-primary">
                                     <i class="bi bi-newspaper"></i> Se alle nyheter
                                 </a>
                             </div>
