--- a/app/templates/norwegian_intel/social_sentiment.html
+++ b/app/templates/norwegian_intel/social_sentiment.html
@@ -174,7 +174,7 @@
                                             <i class="fas fa-plus-circle"></i> Legg til portefølje
                                         </a></li>
                                         <li><hr class="dropdown-divider"></li>
-                                        <li><a class="dropdown-item" href="{{ url_for('watchlist.add') }}?symbol={{ stock.ticker }}">
+                                        <li><a class="dropdown-item" href="{{ url_for('main.watchlist') }}?symbol={{ stock.ticker }}">
                                             <i class="fas fa-eye"></i> Legg til watchlist
                                         </a></li>
                                     </ul>
